--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Crypto197",
-  "version": "1.0.0",
+  "name": "crypto197shahutk",
+  "version": "1.1.0",
   "description": "A small library providing utility methods to encrypt and decrypt messages according to various encryption standards",
   "main": "index.js",
   "scripts": {
@@ -16,6 +16,9 @@
   ],
   "author": "Utkarsh Shah <shahutk@seas.upenn.edu>",
   "license": "BSD-2-Clause",
+  "dependencies": {
+    "commander": "2.5.1"
+  },
   "bugs": {
     "url": "https://github.com/utkarshshah007/Crypto197/issues"
   },
